[gd_scene load_steps=6 format=2]

[ext_resource path="res://Drone03.png" type="Texture" id=1]
[ext_resource path="res://Drone01.jpg" type="Texture" id=2]
[ext_resource path="res://Drone02.png" type="Texture" id=3]
[ext_resource path="res://Drone04.jpg" type="Texture" id=4]
[ext_resource path="res://Node2D.gd" type="Script" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="SpriteDrone1" type="Sprite" parent="."]
position = Vector2( 277.75, 172.125 )
scale = Vector2( 0.196215, 0.212781 )
texture = ExtResource( 2 )

[node name="SpriteDrone2" type="Sprite" parent="."]
position = Vector2( 274, 287 )
texture = ExtResource( 3 )

[node name="SpriteDrone3" type="Sprite" parent="."]
position = Vector2( 276.5, 391.375 )
scale = Vector2( 0.206967, 0.272305 )
texture = ExtResource( 1 )

[node name="SpriteDrone4" type="Sprite" parent="."]
position = Vector2( 272, 513 )
scale = Vector2( 0.196712, 0.253521 )
texture = ExtResource( 4 )

[node name="ButtonDirecao" type="Button" parent="."]
margin_left = 221.0
margin_top = 61.0
margin_right = 294.0
margin_bottom = 81.0
text = "Direciona"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditDirecao" type="LineEdit" parent="."]
margin_left = 334.0
margin_top = 59.0
margin_right = 392.0
margin_bottom = 86.0
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button10DegUp" type="Button" parent="."]
margin_left = 484.0
margin_top = 59.0
margin_right = 596.0
margin_bottom = 87.0
text = "GO UP (10 Deg)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button10DegDown" type="Button" parent="."]
margin_left = 652.0
margin_top = 60.0
margin_right = 790.0
margin_bottom = 91.0
text = "GO DOWN (10 Deg)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDistDrone1" type="Label" parent="."]
margin_left = 51.0
margin_top = 154.0
margin_right = 151.0
margin_bottom = 186.0
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonDirecao" to="." method="_on_ButtonDirecao_pressed"]
[connection signal="pressed" from="Button10DegUp" to="." method="_on_Button10DegUp_pressed"]
[connection signal="pressed" from="Button10DegDown" to="." method="_on_Button10DegDown_pressed"]
